--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "bulma": "^0.9.1",
     "email-validator": "^2.0.4",
     "firebase": "^8.2.1",
-    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slick": "^0.28.1",
     "react-toasts": "^3.0.6",
+    "sass": "^1.34.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
