--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-gtm-module": "^2.0.1",
     "bulma": "^0.9.1",
     "email-validator": "^2.0.4",
     "firebase": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-gtm-module": "^2.0.11",
     "react-pdf": "^5.3.2",
     "react-pdf-js": "^5.1.0",
     "react-router-dom": "^5.2.0",
